--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ subprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 
     configurations.all {
