add version check for api 26 and add jitpack repo for building

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ subprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 
     // FIXME: This picks up non-Java files by default, failing to parse them.
