--- a/samples/showcase/build.gradle
+++ b/samples/showcase/build.gradle
@@ -134,7 +134,7 @@ dependencies {
     implementation project(':vito:provider')
     implementation project(':vito:renderer')
     implementation project(':vito:source')
-    implementation project(':vito:tools:liveeditor')
+    implementation project(':vito:vito-tools:liveeditor')
 
     // Only used for the custom SVG decoder
     implementation SampleDeps.Showcase.caverockSvg
