--- a/settings.gradle
+++ b/settings.gradle
@@ -53,6 +53,6 @@ include ':vito:options'
 include ':vito:provider'
 include ':vito:renderer'
 include ':vito:source'
-include ':vito:tools:liveeditor'
+include ':vito:vito-tools:liveeditor'
 include ':vito:view'
 include ':ui-common'
